# autogensocial-contracts

./: GITHUB_PUBLISHING.md  GIT_INSTALLATION.md  MANIFEST.in  README.md  USAGE.md  pyproject.toml
.github/workflows/: build-and-publish.yml
autogensocial_contracts/: __init__.py
autogensocial_contracts/generators/: __init__.py  client_generator.py  crud_generator.py  validator.py
autogensocial_contracts/models/: __init__.py  brand.py  post.py  postPlan.py  socialAccount.py
autogensocial_contracts/openapi/: __init__.py  content-api.json  content-api.yaml  image-composer.yaml  publisher.yaml
autogensocial_contracts/schemas/: __init__.py  brand.json  post.json  postPlan.json  socialAccount.json
docs/: QUICK_REFERENCE.md  RESTRUCTURING_SUMMARY.md  autogensocial-workflow.mmd
openapi/: content-api.yaml  image-composer.yaml  publisher.yaml
schemas/: brand.json  post.json  postPlan.json
scripts/: codegen.py  demo_generators.py  generate_models.py  publish_to_pypi.sh  usage_examples.py
tests/: test_client_generator.py  test_crud_generator.py  test_validator.py
